# Bomberman

./: ._CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Exceptions.hpp  GLSLProgram.cpp  GLSLProgram.hpp  IO.cpp  IO.hpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  InputManager.hpp  InstallGame.sh  Loader.cpp  Loader.hpp  MainGame.cpp  MainGame.hpp  Maths.cpp  Maths.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Testmain.cpp  Testvertex.glsl  Textfragment.glsl  Texture.cpp  Texture.hpp  Vertex.hpp  Window.cpp  Window.hpp  cube.glb  display.cpp  display.hpp  fragment.glsl  (+12 more)
BomberManGameLogic/: AddBomb.cpp  AddBomb.hpp  Balloon.cpp  Balloon.hpp  Being.cpp  Being.h  Being.hpp  Bomb.cpp  Bomb.hpp  DestructWall.cpp  DestructWall.hpp  Deternator.cpp  Deternator.hpp  FireDown.cpp  FireDown.hpp  FireUp.cpp  FireUp.hpp  Floor.cpp  Floor.hpp  FullFire.cpp  FullFire.hpp  GameLogic.h  GameLogic.hpp  Gate.cpp  Gate.hpp  LevelFactory.cpp  LevelFactory.hpp  LevelRunner.cpp  LevelRunner.hpp  MapLoader.cpp  Object.cpp  Object.h  Onil.cpp  Onil.hpp  Ovapi.cpp  Ovapi.hpp  Player.cpp  Player.hpp  PowerUPAbstract.hpp  PowerUPInterface.hpp  (+9 more)
XMLParser/: XMLNode.cpp  XMLNode.hpp  XMLParser.cpp  XMLParser.hpp
entites/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Model.cpp  Model.hpp  Partical.cpp  Partical.h  Partical.hpp  Player.cpp  Player.hpp  RawModel.cpp  RawModel.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
error_handling/: glError.cpp  glError.hpp  printError.cpp  printError.hpp
extras/: Maths.cpp  Maths.hpp  SavedGame.cpp  SavedGame.hpp  glmOstream.cpp  glmOstream.hpp  tinygltfOstream.cpp  tinygltfOstream.hpp
gui/: CustomButton.cpp  CustomButton.hpp  CustomTextbox.cpp  CustomTextbox.hpp  GUI.cpp  GUI.hpp  GameHUD.cpp  GameHUD.hpp  GuiManager.cpp  GuiManager.hpp  LoadGameScreen.cpp  LoadGameScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  PauseGameScreen.cpp  PauseGameScreen.h  PauseGameScreen.hpp  SaveGameScreen.cpp  SaveGameScreen.h  SaveGameScreen.hpp  SettingsScreen.cpp  SettingsScreen.hpp
gui/CEGUI/: Config.h
includes/: Camera.hpp  Camera2D.hpp  Colour.hpp  Entity.hpp  Exceptions.hpp  FPSCounter.hpp  GLSLProgram.hpp  GLTexture.hpp  IO.hpp  ImageLoader.hpp  InputManager.hpp  MainGame.hpp  Model.hpp  Position2D.hpp  Projectile.hpp  ResourceManager.hpp  Sprite.hpp  SpriteBatch.hpp  Structs.hpp  TextureCache.hpp  Vertex.hpp  Window.hpp  picoPNG.hpp
io/: AudioManager.cpp  AudioManager.hpp  InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp
io/audio/: AudioDevice.cpp  AudioDevice.hpp  AudioListener.cpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp
io/settings/: Settings.cpp  Settings.hpp
loaders/: IO.cpp  IO.hpp  Loader.cpp  Loader.hpp  picoPNG.cpp
rendering/: GLSLProgram.cpp  GLSLProgram.hpp  ParticalRenderer.cpp  ParticalRenderer.hpp  Renderer.cpp  Renderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
resources/Maps/: Map1  Map2  Map3  Map5  Map6  MapTest
resources/Saves/: Slot0.save  Slot1.save
resources/TextureAtlas/: PortalEffect.xcf  fireBall.xcf
resources/Textures/: ConcreatFragment.xcf  Heart.xcf  StopWatch.xcf
resources/gui/datafiles/layouts/: GamePaused.layout  LoadGame.layout  MainMenu.layout  Options.layout  SaveGame.layout
resources/gui/libs/: CopyScript.sh  install.sh  libCEGUIBase-0.dylib  libCEGUICoreWindowRendererSet.dylib  libCEGUIExpatParser.dylib  libCEGUIOpenGLRenderer-0.dylib  libCEGUISILLYImageCodec.dylib  libSILLY_d.dylib  libfreetype_d.2.7.dylib  libjpeg_d.dylib  libpng_d.dylib  libzlib_d.dylib
resources/moddels/: Bomb.glb  Bomber.glb  Bomber2.glb  DestructWall.glb  FierUp.blend  FierUp.blend1  FireDown.blend1  OBJDEMO.blend  OBJDEMO.blend1  Wall.blend  WingBoot.glb  WingedBoot.blend1  bommerman.blend  bommerman.blend1  bomner2.blend  bomner2.blend1  bomner2.glb  bomner2.gltf  companion.blend  companion.glb  doubleCube.glb  dumb.blend  dumb.glb  unwrappedCube.glb
resources/models/: Balloon.glb  Baloon.glb  Bomb.glb  Bomber.glb  Deternator.glb  FireDown.blend  FireDown.glb  FireUp.glb  Floor.glb  FloorBurnDiffusecolor.xcf  FloorDiffusecolor.xcf  FullFire.glb  Gate.glb  OBJDEMO.blend  OBJDEMO.blend1  Ovapi.glb  Wall.glb  WallPass.glb  WallPass.xcf  WingBoot.glb  WingedBoot.blend  bomberMan.blend
resources/settings/: settings.data
shaders/: fragment.glsl  fragmentshader.fsh  fragmentshader.glsl  particalFragment.glsl  particalVertex.glsl  sprite.f.glsl  sprite.v.glsl  vertex.glsl  vertexshader.vsh
sounds/: Sounds.cpp  Sounds.hpp
src/: Camera.cpp  Camera2D.cpp  Colour.cpp  Entity.cpp  FPSCounter.cpp  GLSLProgram.cpp  IO.cpp  ImageLoader.cpp  MainGame.cpp  Model.cpp  Position2D.cpp  Projectile.cpp  ResourceManager.cpp  Sprite.cpp  SpriteBatch.cpp  TextureCache.cpp  Vertex.cpp  Window.cpp  main.cpp  picoPNG.cpp
tinyGLTF/: stb_image.h  tiny_gltf.h
